bynkc/tests/fixtures/negative/488_messages_malformed_icu_hash_outside_select/src/bundle.bynk
commons bundle

uses bynk.locale

messages en @reference {
  "greeting" => "{g, select, male {# things} female {things} other {things}}"
}
